samples/_failures_safe/1761627194_b566b8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_286f221c.c: In function ‘main’:
./samples/SAFE/__tmp_286f221c.c:198:5: error: expected declaration or statement at end of input
  198 |     if (token_count == 0) {
      |     ^~
./samples/SAFE/__tmp_286f221c.c:198:5: error: expected declaration or statement at end of input
